# RTK

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
ctk/: __init__.py  __main__.py  cli.py
ctk/core/: __init__.py  config.py  metrics.py  rewriter.py
ctk/utils/: __init__.py  filters.py  helpers.py  output_filter.py  patterns.py  symbols.py  tokenizer.py
docs/plans/: 2026-02-18-ctk-refactoring-design.md  2026-02-18-ctk-refactoring-implementation.md
hooks/: ctk-rewrite.sh  hooks.json  session-start.sh
tests/: test_cli.py  test_compressors.py  test_filters.py  test_helpers.py  test_metrics.py  test_output_filter.py  test_patterns.py  test_rewriter.py  test_symbols.py  test_tokenizer.py
